# Diora

./: Dockerfile  Makefile  README.md  install.sh  okteto.yml
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/aura-style-filter/: Cargo.toml
pallets/author-inherent/: Cargo.toml
pallets/author-mapping/: Cargo.toml
pallets/author-mapping/src/: benchmarks.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/author-slot-filter/: Cargo.toml
pallets/block-reward/src/: lib.rs  weights.rs
pallets/dapps-staking/: Cargo.toml
pallets/dapps-staking/src/: lib.rs  weights.rs
pallets/diora-rewards/: Cargo.toml
pallets/diora-rewards/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/ethereum-chain-id/: Cargo.toml
pallets/ethereum-chain-id/src/: lib.rs
pallets/parachain-staking/: Cargo.toml
pallets/parachain-staking/src/: benchmarks.rs  delegation_requests.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/template/: Cargo.toml
polkadot-launch/: config.json
precompiles/dapps-staking/: Cargo.toml  DappsStakingInterface.sol
precompiles/dapps-staking/src/: lib.rs  mock.rs  tests.rs
precompiles/parachain-staking/: Cargo.toml  ParachainStakingInterface.sol
precompiles/parachain-staking/src/: lib.rs  mock.rs  tests.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/macro/src/precompile/: mod.rs
precompiles/utils/macro/tests/: tests.rs
precompiles/utils/macro/tests/compile-fail/derive_evm_data/: empty_struct.rs  enum.rs
precompiles/utils/macro/tests/compile-fail/precompile/discriminant/: dont-return-option.rs  missing-fn.rs  missing-param.rs  return-incomplete-option.rs  too-many-arguments.rs  type-mismatch-1.rs  type-mismatch-2.rs
precompiles/utils/macro/tests/compile-fail/precompile/evm-data/: arg-dont-impl-evmdata.rs  no-output.rs  output-dont-impl-evmdata.rs  output-not-result.rs  output-wrong-error-result.rs
precompiles/utils/macro/tests/compile-fail/precompile/fn-modifiers/: discriminant-multiple.rs  multiple-modifiers.rs  pre-check-multiple.rs
precompiles/utils/macro/tests/compile-fail/precompile/handle/: missing.rs  set-missing.rs  set-wrong-type.rs  wrong-type.rs
precompiles/utils/macro/tests/compile-fail/precompile/pre-check/: no-parameter.rs  too-many-parameters.rs  wrong-parameter.rs
precompiles/utils/macro/tests/compile-fail/precompile/test-gen/: generic-arg.rs
precompiles/utils/macro/tests/expand/: precompile.rs  precompileset.rs  returns_tuple.rs
precompiles/utils/macro/tests/pass/: derive_evm_data.rs  precompile_fn_modifiers.rs
precompiles/utils/src/: lib.rs
precompiles/utils/src/testing/: account.rs  execution.rs  handle.rs  mod.rs  modifier.rs  solidity.rs
precompiles/utils/tests-external/: Cargo.toml  lib.rs
primitives/session-keys/: Cargo.toml
primitives/session-keys/src/: lib.rs  vrf.rs
runtime/: Cargo.toml  build.rs
runtime/src/: constants.rs  lib.rs  pallet_account_set.rs  precompiles.rs  xcm_config.rs
script/: build.sh  dev_init.sh  generate_config.sh  generate_key.sh  install.sh  install_diora.sh  regenerateConfig-rococo-local.sh  remix.sh  rococo-start-all.sh  rococo.sh  start-all.sh  start2.sh  start_diora.sh  start_diora_rococo.sh
utils/: loop.js  tx.js
